<resources>
    <string name="app_name">El PerlaNegra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registro">REGISTRO</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="direcci_n">Dirección</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_nlog">INICIAR SESIÓN</string>
    <string name="men_diario">Menú Diario</string>
    <string name="ofertas_tiempo_limitado">Ofertas Tiempo Limitado</string>
    <string name="pedidos">Pedidos</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mispedidos">Mis Pedidos</string>
    <string name="micarrito">Mi Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="user1234_gmail_com">user1234@gmail.com</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
</resources>